--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,9 @@ body {
   }
   
   .jumbotron {
-    background: linear-gradient(to right, #d63031, #6c5ce7);
+    background: linear-gradient(to right, #a91816, #FEDE17);
     text-align: center;
-    color: white;
+    color: #F8F6F0;
     border-radius: 0;
     padding-top: 30px;
     padding-bottom: 20px;
